# tft-dps

./: .dockerignore  .env  .gitmodules  Dockerfile  README.md  compose.yml
tft-dps/: main.py
tft-dps/lib/: calc_ctx.py
tft_dps/: .gitignore  pyproject.toml  requirements.txt
tft_dps/data/: dps_config.json
tft_dps/src/: main.py
tft_dps/src/lib/: cache.py  calc_ctx.py  constants.py  resolver.py  simulate_attacks.py
tft_dps/src/lib/simulator/: calc_stats.py  combat_system.py  plot.py  sim_state.py  sim_system.py  simulate.py  unit_quirks.py
tft_dps/src/lib/simulator/units/: aatrox.py
tft_dps/src/lib/utils/: misc_utils.py
tft_dps/tft_dps/: api.py  benchmark.py  main.py  web.py
tft_dps/tft_dps/lib/: cache.py  calc_ctx.py  constants.py  db.py  paths.py  resolver.py
tft_dps/tft_dps/lib/simulator/: calc_stats.py  combat_system.py  crit_system.py  plot.py  sim_event.py  sim_runner.py  sim_state.py  sim_system.py  simulate.py  unit_quirks.py
tft_dps/tft_dps/lib/simulator/quirks/: __init__.py  five.py  four.py  item_quirks.py  one.py  quirks.py  three.py  trait_quirks.py  two.py  unit_quirk_map.py
tft_dps/tft_dps/lib/utils/: db_utils.py  misc_utils.py  network_utils.py  sim_utils.py  test_network_utils.py
tft_dps/tft_dps/lib/web/: app.py  app_worker.py  job_worker.py  worker_manager.py
tft_dps/tft_dps/lib/web/handlers/: handle_simulate.py  handle_simulate_details.py
web/: .prettierrc  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/assets/: tft_dps-0.0.1-py2.py3-none-any.whl
(+66 files in other folders)
