[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tft_dps"]

[project]
name = "tft_dps"
version = "0.0.1"
dependencies = [
    "aiohttp",
    "bitarray",
    "build",
    "fastapi",
    "loguru",
    "pillow",
    "pytest",
    "requests",
    "ujson",
    "uvicorn",
    "xxhash",
]
